DuPont DevSB/src/objects/DuPontM__Cat_Content_Junction__c.object
<CustomObject>
    <fields>
        <fullName>DuPontM__Category__c</fullName>
        <label>Category</label>
        <referenceTo>DuPontM__Category__c</referenceTo>
        <relationshipLabel>Cat-Content-Junctions</relationshipLabel>
        <relationshipName>Cat_Content_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DuPontM__ContentId__c</fullName>
        <label>ContentId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DuPontM__External_Id__c</fullName>
        <description>To maintain unique combinations of Content and Category Ids. Will be of the form CategoryId_ContentId</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cat-Content-Junction</label>
    <listViews>
        <fullName>DuPontM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCJ-{00000}</displayFormat>
        <label>Cat-Content-Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cat-Content-Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>